Fixed the uneven margin issue on preset-customize page

--- a/source/webapp/preset-customize/style.css
+++ b/source/webapp/preset-customize/style.css
@@ -2,25 +2,24 @@
     box-sizing: border-box;
 }
 
-.column {
+.column1 {
     float: left;
     width: 50%;
-    padding: 50px;
-    margin-left: auto;
-}
-  
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
 }
 
-.title{
-    margin-left: 150px;
+.column2 {
+    float: right;
+    width: 50%;
 }
 
-#preset-photo{
-    margin-left: 60px;
+.center {
+    margin: 0;
+    position: relative;
+    text-align: center;
+}
+
+.row {
+    padding-top: 50px;
 }
 
 .button{
@@ -33,7 +32,7 @@
     text-align: center;
     vertical-align: middle;
     font-size: 15px;
-    margin: 10px 210px;
+    /*margin: 10px 210px;*/
     /* padding: 7px 20px 10px 40px; */
     cursor: pointer;
 }
